--- a/spring_login_register_email/src/main/resources/application.yml
+++ b/spring_login_register_email/src/main/resources/application.yml
@@ -1,17 +1,19 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop;
+    url: jdbc:h2:tcp://localhost/~/board;
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: true
         use_sql_comments: true
+    database-platform: org.hibernate.dialect.H2Dialect
 logging:
   level:
     org.hibernate.SQL: debug
+
